--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/Clizamaa/bac_web#readme",
   "dependencies": {
     "express": "^4.18.1",
-    "nodemailer": "^6.7.8"
+    "nodemailer": "^6.7.8",
+    "sweetalert2": "^11.4.28"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
